welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:7: error: ';' expected but '{' found.
	}while(!croisement) {
                            ^